Initial sections for proposal finished, added idris packages for listing idris code

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,4 +1,12 @@
 \documentclass[conference]{IEEEtran}
+\usepackage[T1]{fontenc}
+\usepackage{xcolor}
+\usepackage{lmodern}
+\usepackage{idrislang}
+\usepackage{listings}
+\usepackage{mathtools}
+\usepackage{amsfonts}
+
 
 
 \begin{document}
@@ -19,25 +27,12 @@
 
 
 \input{include/abstract.tex}
+\input{include/problem_definition.tex}
+\input{include/project_aims.tex}
+\input{include/background_reading.tex}
+\input{include/feasibility_study.tex}
 
-\section{Test}
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks. \cite{halting}. 
-
-\section{Test2}
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-Entering random text to see how it looks.
-
-
-\bibliographystyle{abbrv}
-\bibliography{bib} 
+%\bibliographystyle{abbrv}
+%#\bibliography{bib} 
 
 \end{document}
