--- a/proposal/idrislang.sty
+++ b/proposal/idrislang.sty
@@ -66,7 +66,7 @@
   xleftmargin=1.5em,
   tabsize=2,
   upquote=true,
-  basicstyle=\ttfamily,
+  basicstyle=\small\ttfamily,
   flexiblecolumns=false,
   commentstyle=\footnotesize\itshape,
 %% ---------------------------------------------------------------- [ Keywords ]
